feat: leaf litter generation